<resources>
    <string name="app_name">Hotel</string>
    <string name="password">password</string>
    <string name="book_now" />
    <string name="usernames" />
    <string name="log_in">log in</string>

    <string name="todo">todo</string>
    <string name="book_now1">BOOK NOW</string>
    <string name="username">username</string>
    <string name="log__in">log in</string>
    <string name="create_account">Create account</string>
    <string name="_3_km_to_city">3 km to city</string>
    <string name="_900">900</string>
    <string name="_550_per_night">550$ per night</string>
    <string name="_1200">1200</string>
    <string name="_440_per_night">440$ per night</string>
    <string name="barcalona_spain">barcalona spain</string>
    <string name="_2_km_to_city">2 km to city</string>
    <string name="_1_5_km_to_city">1.5 km to city</string>
    <string name="_700">700</string>
    <string name="hotel_atlantic">hotel atlantic</string>
    <string name="best_deals">best deals</string>
    <string name="hotel_murila">hotel murila</string>

    <string name="_220_per_night">220$ per night</string>
    <string name="hotel_boutique">hotel boutique</string>
    <string name="berlin_germany">berlin germany</string>
    <string name="create_account22">Create Account</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="_05">05**********</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="phone_number">phone number</string>
    <string name="adult">adult</string>
    <string name="children">children</string>
    <string name="_2">2</string>
    <string name="check_out">check out</string>
    <string name="check_in">check in</string>
    <string name="hotel_name_boutiqe">hotel name boutiqe</string>
    <string name="number_of_rooms">number of rooms</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="_4">4</string>
    <string name="next">NEXT</string>
    <string name="done">Done</string>
    <string name="_550">550$</string>
    <string name="ccv">ccv</string>
    <string name="mm_yy">mm-yy</string>
    <string name="card_type">card type</string>
    <string name="card_number">card number</string>
    <string name="expire_date">expire date</string>
    <string name="credit_card_information">credit card information</string>
    <string name="visa_mada_etc">visa,mada,etc</string>
    <string name="_1111_1111_1111_1111">1111 1111 1111 1111</string>
    <string name="_110">110</string>
    <string name="hotel_name">Hotel name</string>
    <string name="location">Location</string>
    <string name="distance_from_landmark">Distance from landmark</string>
    <string name="_500">$500</string>
    <string name="per_night">per night</string>
    <string name="todo2">TODO</string>
    <string name="hotel">Hotel :</string>
    <string name="gfdgs">gfdgs</string>
    <string name="hotel_name2">hotel name</string>
    <string name="search_hotels">Search Hotels</string>
    <string name="search_all_hotels_by_name">Search all hotels by name</string>
    <string name="list_hotels">List Hotels</string>
    <string name="list_all_available_hotels">List all available hotels</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
</resources>