<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/hotelImg"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:padding="5dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:contentDescription="@string/todo2" />

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hotelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_name"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:padding="2dp"
                android:textColor="#4d4d4d"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
            <TextView
                android:id="@+id/hotelCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/location"
                android:layout_marginStart="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
            <TextView
                android:id="@+id/hotelDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/distance_from_landmark"
                android:layout_marginStart="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <RatingBar
                android:id="@+id/hotelStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX=".6"
                android:scaleY=".6"
                android:layout_marginStart="-40dp"
                android:stepSize="0.8"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:isIndicator="true"></RatingBar>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hotelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/_500"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                android:textStyle="bold"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:id="@+id/priceDesc"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="78dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/per_night"
                android:textColor="@color/grey_500"
                android:textSize="10sp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>