<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/listCard"
        android:layout_width="261dp"
        android:layout_height="229dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:background="@color/purple_600"
            android:orientation="vertical">

            <!-- Media -->

            <ImageView
                android:layout_width="132dp"
                android:layout_height="139dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/round_format_list_bulleted_black_48"
                app:tint="@color/teal_200"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="493dp"
                android:contentDescription="@string/todo4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="vertical"
                android:padding="16dp"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="632dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_hotels"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="#fff"
                    tools:layout_editor_absoluteX="103dp"
                    tools:layout_editor_absoluteY="648dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_all_available_hotels"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#eaebef"
                    tools:layout_editor_absoluteX="103dp"
                    tools:layout_editor_absoluteY="683dp" />


            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchCard"
        android:layout_width="261dp"
        android:layout_height="229dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_600"
            android:orientation="vertical">

            <!-- Media -->

            <ImageView
                android:layout_width="131dp"
                android:layout_height="139dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/round_search_black_48"
                app:tint="@color/teal_200"
                android:contentDescription="@string/todo3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_hotels"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/search_all_hotels_by_name"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#eaebef" />


            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>